# Copyright 2018-2024 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_webnn"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Implementation of WebSocket API for Deno"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }